Update and rename 2023-03-23-talk-1.md to 2012-03-01-talk-1.md

--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -1,8 +1,8 @@
 ---
-title: "Association of Education Finance and Policy (AEFP)"
+title: "Association of Education Finance and Policy"
 collection: talks
 type: "Poster"
-permalink: /talks/2023-03-23-talk-1.md
+permalink: /talks/2012-03-01-talk-1.md
 venue: "Gradn Hyatt Hotel"
 date: 2023-03-23
 location: "Denver, Colorado, USA"
