--- a/_talks/2012-03-01-AEFP.md
+++ b/_talks/2012-03-01-AEFP.md
@@ -1,7 +1,7 @@
 ---
 title: "Association of Education Finance and Policy"
 collection: talks
-type: "Talk"
+type: "Poster"
 permalink: /talks/2012-03-01-talk-1
 venue: "Gradn Hyatt Hotel"
 date: 2023-03-23
