--- a/_talks/2023-03-23-AEFP.md
+++ b/_talks/2023-03-23-AEFP.md
@@ -2,7 +2,7 @@
 title: "Association of Education Finance and Policy"
 collection: talks
 type: "Poster"
-permalink: /talks/2012-03-01-talk-1
+permalink: /talks/2023-03-23-AEFP
 venue: "Gradn Hyatt Hotel"
 date: 2023-03-23
 location: "Denver, Colorado, USA"
